- minSdkVersion updated to 23 to support runtime permission - code to ask runtime permission added - BodySensor Permission added in manifest

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.accel.accelerometertest">
 
     <uses-feature android:name="android.hardware.type.watch" />
+    <uses-permission android:name="android.permission.BODY_SENSORS" />
+
 
     <application
         android:allowBackup="true"
